src/components/z-toolbar/styles.css
:host,
* {
  box-sizing: border-box;
}

:host {
  display: inline-flex;
  align-items: center;
  padding: 0;
  border: var(--border-size-small) solid var(--color-surface03);
  background-color: var(--color-surface01);
  border-radius: var(--border-radius);
  box-shadow: var(--shadow-4);
  gap: calc(var(--space-unit) / 2);
}

::slotted(z-divider) {
  height: calc(var(--space-unit) * 4.5) !important;
}

@media (max-width: 767px) {
  :host {
    --z-toolbar-columns: 8;

    position: relative;
    display: inline-grid;
    align-items: stretch;
    background: repeating-linear-gradient(
      to bottom,
      transparent 0,
      transparent 44px,
      var(--color-surface03) 44px,
      var(--color-surface03) 45px
    ) center / calc(100% - var(--space-unit)) 100% no-repeat var(--color-surface01);
    column-gap: 4px;

    /* grid-template-columns: repeat(var(--z-toolbar-columns, 27), auto); 27 is the max number of tools that can fit in a single row at the biggest breakpoint (1151px) with the current tool size and spacing. */
    grid-template-columns: repeat(var(--z-toolbar-columns, auto-fill), auto);
    row-gap: var(--border-size-small);


    /* Overrides z-tool submenu positioning */
    --z-tool-host-position: static;
    --z-tool-submenu-top: auto;
    --z-tool-submenu-bottom: calc(100% + 4px);
    --z-tool-submenu-left: 0;
    --z-tool-submenu-transform: none;
  }

  ::slotted(z-divider) {
    display: none !important;
  }

  ::slotted(z-tool) {
    border-radius: var(--border-radius);
  }

}

